--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,4 +53,6 @@ dependencies {
     compile 'com.jakewharton.timber:timber:4.4.0'
     compile 'com.android.support:recyclerview-v7:25.1.0'
     compile 'com.android.support:cardview-v7:25.1.0'
+
+    compile 'com.firebase:firebase-jobdispatcher:0.5.0'
 }
