--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,11 +3,12 @@
     package="io.droidninja.feeder">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:name=".FeederApplication"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/ic_shortcut_feeder"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
@@ -21,14 +22,14 @@
             </intent-filter>
         </activity>
         <activity android:name=".ui.activities.FeedsCatalogActivity" />
-        <activity android:name=".ui.activities.MainActivity"></activity>
+        <activity android:name=".ui.activities.MainActivity" />
 
         <provider
             android:name=".contentProvider.FeederContentProvider"
             android:authorities="io.droidninja.feeder"
             android:exported="false" />
-        <service android:name=".sync.FeederSyncIntentService" />
 
+        <service android:name=".sync.FeederSyncIntentService" />
         <service
             android:name=".sync.FeederFirebaseJobService"
             android:exported="false">
@@ -36,6 +37,8 @@
                 <action android:name="com.firebase.jobdispatcher.ACTION_EXECUTE" />
             </intent-filter>
         </service>
+
+        <activity android:name=".ui.activities.ArticleActivity"></activity>
     </application>
 
 </manifest>
